// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SearchUser] interaction with Profile Modal show profile modal when press user in search user list 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityViewIsModal={true}
    importantForAccessibility="yes"
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(0,0,0,0)",
          "zIndex": 2,
        },
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableWithoutFeedback>
        <View
          importantForAccessibility="no"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.075,
                },
              ]
            }
          />
        </View>
      </TouchableWithoutFeedback>
      <View
        style={
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "height": 320,
            "justifyContent": "center",
            "transform": Array [
              Object {
                "translateY": -1334,
              },
              Object {
                "translateX": 0,
              },
            ],
            "width": "90%",
          }
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          proxiedProperties={
            Object {
              "colors": Array [
                4282027007,
                4284794879,
              ],
              "endPoint": Array [
                1,
                0.8,
              ],
              "locations": Array [
                0,
                0.85,
              ],
              "startPoint": Array [
                0.4,
                0.6,
              ],
            }
          }
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "height": 320,
              "justifyContent": "space-between",
              "marginHorizontal": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginTop": 40,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
            >
              <Image
                source={
                  Object {
                    "uri": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "alignSelf": "center",
                    },
                  ]
                }
              />
            </TouchableOpacity>
            <Text
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "marginTop": 32,
                  },
                ]
              }
            >
              admin
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 12,
                    "marginTop": 8,
                  },
                ]
              }
            >
              online
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-ad-friend"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "rgb(58,139,255)",
                        "fontSize": 16,
                      },
                    ]
                  }
                  testID="btn-ad-title"
                >
                  Add
                </Text>
              </View>
            </TouchableOpacity>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "rgb(221,226,236)",
                    "height": 80,
                    "width": 1,
                  },
                ]
              }
            />
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-chat"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "rgb(58,139,255)",
                        "fontSize": 16,
                      },
                    ]
                  }
                >
                  Chat
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </ViewManagerAdapter_ExpoLinearGradient>
      </View>
    </View>
  </View>
  <SafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "height": 50,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 50,
                "paddingHorizontal": 20,
                "position": "absolute",
                "width": "100%",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            defaultValue=""
            multiline={false}
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "rgb(247,248,251)",
                  "borderRadius": 4,
                  "color": "black",
                  "height": 30,
                  "paddingLeft": 34,
                  "paddingRight": 10,
                  "top": 10,
                  "width": "100%",
                },
              ]
            }
            testID="txtInput"
            underlineColorAndroid="transparent"
          />
          <Image
            source={
              Object {
                "canInstrument": true,
                "createTransformer": [Function],
                "getCacheKey": [Function],
                "process": [Function],
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "left": 30,
                  "position": "absolute",
                  "top": 18,
                  "width": 16,
                },
              ]
            }
          />
        </View>
      </View>
      <ScrollView
        ListEmptyComponent={
          <Shared
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flex": 1,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            No content
          </Shared>
        }
        data={
          Array [
            Object {
              "displayName": "admin",
              "online": true,
              "photoURL": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
              "statusMsg": "online",
              "thumbURL": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
              "uid": "1",
            },
            Object {
              "displayName": "geoseong",
              "online": false,
              "photoURL": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
              "uid": "2",
            },
            Object {
              "displayName": "hyochan",
              "online": false,
              "photoURL": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
              "uid": "3",
            },
            Object {
              "displayName": "mars",
              "online": true,
              "photoURL": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
              "uid": "4",
            },
            Object {
              "displayName": "gordon",
              "online": true,
              "photoURL": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
              "uid": "5",
            },
            Object {
              "displayName": "admin2",
              "online": true,
              "photoURL": "https://avatars3.githubusercontent.com/u/31645570?s=200&v=4",
              "statusMsg": "online",
              "thumbURL": "https://avatars3.githubusercontent.com/u/31645570?s=200&v=4",
              "uid": "6",
            },
            Object {
              "displayName": "geoseong2",
              "online": false,
              "photoURL": "https://blogpfthumb-phinf.pstatic.net/20151226_89/imf4_1451062410452TqxER_JPEG/20120428000007_1.jpg",
              "statusMsg": "offline",
              "thumbURL": "https://blogpfthumb-phinf.pstatic.net/20151226_89/imf4_1451062410452TqxER_JPEG/20120428000007_1.jpg",
              "uid": "7",
            },
            Object {
              "displayName": "hyochan2",
              "online": false,
              "photoURL": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
              "statusMsg": "offline",
              "thumbURL": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
              "uid": "8",
            },
            Object {
              "displayName": "mars2",
              "online": true,
              "photoURL": "https://github.com/marsinearth/violin-mockup/blob/master/static/favicons/android-chrome-192x192.png?raw=true",
              "statusMsg": "offline",
              "thumbURL": "https://github.com/marsinearth/violin-mockup/blob/master/static/favicons/android-chrome-192x192.png?raw=true",
              "uid": "9",
            },
            Object {
              "displayName": "gordon2",
              "online": true,
              "photoURL": "https://miro.medium.com/fit/c/256/256/2*rbUkfoA5vfuphYYULjIG_Q.png",
              "statusMsg": "offline",
              "thumbURL": "https://miro.medium.com/fit/c/256/256/2*rbUkfoA5vfuphYYULjIG_Q.png",
              "uid": "10",
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        style={
          Object {
            "height": "100%",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
        testID="animatedFlatlist"
        testObj={
          Object {
            "scrollY": 0,
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem0"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  admin
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  online
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem1"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  geoseong
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem2"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  hyochan
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem3"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  mars
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem4"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  gordon
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem5"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars3.githubusercontent.com/u/31645570?s=200&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  admin2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  online
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem6"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://blogpfthumb-phinf.pstatic.net/20151226_89/imf4_1451062410452TqxER_JPEG/20120428000007_1.jpg",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  geoseong2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem7"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  hyochan2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem8"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://github.com/marsinearth/violin-mockup/blob/master/static/favicons/android-chrome-192x192.png?raw=true",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  mars2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem9"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://miro.medium.com/fit/c/256/256/2*rbUkfoA5vfuphYYULjIG_Q.png",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  gordon2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </ScrollView>
    </View>
  </SafeAreaView>
</View>
`;

exports[`[SearchUser] rendering test renders as expected 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <SafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "height": 50,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 50,
                "paddingHorizontal": 20,
                "position": "absolute",
                "width": "100%",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            defaultValue=""
            multiline={false}
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "rgb(247,248,251)",
                  "borderRadius": 4,
                  "color": "black",
                  "height": 30,
                  "paddingLeft": 34,
                  "paddingRight": 10,
                  "top": 10,
                  "width": "100%",
                },
              ]
            }
            testID="txtInput"
            underlineColorAndroid="transparent"
          />
          <Image
            source={
              Object {
                "canInstrument": true,
                "createTransformer": [Function],
                "getCacheKey": [Function],
                "process": [Function],
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "left": 30,
                  "position": "absolute",
                  "top": 18,
                  "width": 16,
                },
              ]
            }
          />
        </View>
      </View>
      <ScrollView
        ListEmptyComponent={
          <Shared
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flex": 1,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            No content
          </Shared>
        }
        data={
          Array [
            Object {
              "displayName": "admin",
              "online": true,
              "photoURL": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
              "statusMsg": "online",
              "thumbURL": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
              "uid": "1",
            },
            Object {
              "displayName": "geoseong",
              "online": false,
              "photoURL": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
              "uid": "2",
            },
            Object {
              "displayName": "hyochan",
              "online": false,
              "photoURL": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
              "uid": "3",
            },
            Object {
              "displayName": "mars",
              "online": true,
              "photoURL": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
              "uid": "4",
            },
            Object {
              "displayName": "gordon",
              "online": true,
              "photoURL": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
              "statusMsg": "offline",
              "thumbURL": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
              "uid": "5",
            },
            Object {
              "displayName": "admin2",
              "online": true,
              "photoURL": "https://avatars3.githubusercontent.com/u/31645570?s=200&v=4",
              "statusMsg": "online",
              "thumbURL": "https://avatars3.githubusercontent.com/u/31645570?s=200&v=4",
              "uid": "6",
            },
            Object {
              "displayName": "geoseong2",
              "online": false,
              "photoURL": "https://blogpfthumb-phinf.pstatic.net/20151226_89/imf4_1451062410452TqxER_JPEG/20120428000007_1.jpg",
              "statusMsg": "offline",
              "thumbURL": "https://blogpfthumb-phinf.pstatic.net/20151226_89/imf4_1451062410452TqxER_JPEG/20120428000007_1.jpg",
              "uid": "7",
            },
            Object {
              "displayName": "hyochan2",
              "online": false,
              "photoURL": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
              "statusMsg": "offline",
              "thumbURL": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
              "uid": "8",
            },
            Object {
              "displayName": "mars2",
              "online": true,
              "photoURL": "https://github.com/marsinearth/violin-mockup/blob/master/static/favicons/android-chrome-192x192.png?raw=true",
              "statusMsg": "offline",
              "thumbURL": "https://github.com/marsinearth/violin-mockup/blob/master/static/favicons/android-chrome-192x192.png?raw=true",
              "uid": "9",
            },
            Object {
              "displayName": "gordon2",
              "online": true,
              "photoURL": "https://miro.medium.com/fit/c/256/256/2*rbUkfoA5vfuphYYULjIG_Q.png",
              "statusMsg": "offline",
              "thumbURL": "https://miro.medium.com/fit/c/256/256/2*rbUkfoA5vfuphYYULjIG_Q.png",
              "uid": "10",
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        style={
          Object {
            "height": "100%",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
        testID="animatedFlatlist"
        testObj={
          Object {
            "scrollY": 0,
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem0"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  admin
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  online
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem1"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  geoseong
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem2"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  hyochan
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem3"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  mars
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem4"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  gordon
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem5"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars3.githubusercontent.com/u/31645570?s=200&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  admin2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  online
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem6"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://blogpfthumb-phinf.pstatic.net/20151226_89/imf4_1451062410452TqxER_JPEG/20120428000007_1.jpg",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  geoseong2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem7"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  hyochan2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem8"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://github.com/marsinearth/violin-mockup/blob/master/static/favicons/android-chrome-192x192.png?raw=true",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  mars2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="userListItem9"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "rgb(221,226,236)",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://miro.medium.com/fit/c/256/256/2*rbUkfoA5vfuphYYULjIG_Q.png",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontSize": 14,
                        "marginLeft": 12,
                        "width": 100,
                      },
                    ]
                  }
                >
                  gordon2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "rgb(221,226,236)",
                        "borderWidth": 0.3,
                        "color": "rgb(65,77,107)",
                        "fontSize": 12,
                        "maxWidth": 134.2,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </ScrollView>
    </View>
  </SafeAreaView>
</View>
`;
